# silent-payments

./: .gitignore  README.md
server/: .env  Cargo.toml
server/migrations/: 20250320180317_0001.sql
server/src/: config.rs  error.rs  lib.rs  main.rs  silentpayments.rs  store.rs  sync.rs
server/src/server/: handler.rs  handlers.rs  mod.rs
server/src/store/: mod.rs  model.rs
server/src/sync/: mod.rs  rpc.rs
server/src/tests/: fixtures.rs
