[package]
name = "silent-payments-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
bitcoincore-rpc = "0.19.0"
derive_more = { version = "2.0.1", features = ["from"] }
futures = "0.3.31"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
